feat(skill): add public marketplace and agent links